--- a/app/views/shared/_how_it_works.html.erb
+++ b/app/views/shared/_how_it_works.html.erb
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="span4">
            <h1> 3 </h1> <br/>     
-        <h4>Request a meetup with the host(s) of you choice. Take a note of what they're asking for in exchange.</h4>
+        <h4>Request a meetup with the host(s) of your choice. Take a note of what they're asking for in exchange.</h4>
         </div>
         <div class="span4">
            <br/>
