--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,11 +15,11 @@
     <%= f.text_field :email %>
   </div>
   <div class="field" id ="personalform">
-    <%= f.label :firstname %>
+    <%= f.label :first_name %>
     <%= f.text_field :firstname %>
   </div>
   <div class="field" id ="personalform">
-    <%= f.label :lastname %>
+    <%= f.label :last_name %>
     <%= f.text_field :lastname %>
   </div>
   <div class="field" id ="personalform">
@@ -27,7 +27,7 @@
       <%= f.password_field :password %>
     </div>
     <div class="field" id ="personalform">
-      <%= f.label :password_confirmation %>
+      <%= f.label :confirm_password %>
       <%= f.password_field :password_confirmation %>
     </div>
   <br>
