--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,8 @@
 <%= provide(:title, 'search') %>
-<div class="filler">
-   
-</div>
 <%= form_tag fill_location_path, method: 'get', class: "" do %>
 <div id="personalform">
    <%=render 'shared/country_city_select', :inline_search => true%>
-<%= submit_tag "Search", :name => nil, id: "blue-button", :style=>"width: 70px" %>
+<%= submit_tag "Find", :name => nil, id: "blue-button", :style=>"width: 70px" %>
 </div>
 <%end%>
 
