--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,14 +62,14 @@ $navbarLinkColor:#ccc;
 	h1{
 		border:1px solid #999;
 		border-radius: 4px;
-		color:#00CC99;
+		color:#E0FFF0;
 		padding-left:20px;
-		background: #ddd;
+		background: #aaa;
 	}
 	h4{
 		font-size:1.3em;
 		font-weight: normal;
-		color: #ccc;
+		color: #ddd;
 	}
 	
 	h3{
@@ -310,7 +310,7 @@ div{
 #message_icon
 {
 	color: white; 
-	background-color:#B2CAEB; 
+	background-color:#47A3FF; 
 	padding: 5px;
 	margin-right: 10px;
 	margin-left: -3px;
@@ -318,7 +318,7 @@ div{
 	border-bottom: 1px solid #eee;
 	
 	&:hover{
-		background-color: pink
+		background-color: #E65C5C
 	};
 	
 	a, a:hover{
