--- a/app/views/hostprofiles/_service_information.html.erb
+++ b/app/views/hostprofiles/_service_information.html.erb
@@ -7,10 +7,12 @@
     </div>
      <div class="field" id="personalform">
        <%= f.label :Service_Description %>
+       Tell travelers what you are offering. Describe the kind of experience they will get with you as their tini host. 
        <%= f.text_area :serviceDesc, :toolbar=>'Basic' %>
      </div>
      <div class="field" id="personalform">
-       <%= f.label :green_description %>
+       <%= f.label :green_points %>
+       TiniHost encourages everyone to be environmentally aware when traveling. Tell travelers how you encourage environmentally conscious practices. It can be as simple as using public transportation to get around.
        <%= f.text_area :greenDesc, :toolbar=>'Basic' %>
      </div>
 </div>
