--- a/app/views/pages/_hostinfo.html.erb
+++ b/app/views/pages/_hostinfo.html.erb
@@ -1,9 +1,9 @@
 <h2> Who should be a tiniHost?</h2>
-<h4>Do you know the trendiest boutiques or the hottest bars in town? Can you cook a mean local dish or take someone on a crazy adventure to the middle of nowhere? Become a tiniHost to share your wisdom with travelers looking for fun and original ways to experience your city in exchange for payment, language practice, or the simple joy of making a new friend. </h4>
+<h4>Do you know the trendiest boutiques or the place to go for live music in town? Can you cook a mean local dish or take someone on a crazy adventure to the middle of nowhere? <br/><br/><b>Become a tiniHost to entertain travelers looking for fun and original ways to experience your city in exchange for payment, language practice, or the simple joy of making a new friend. </b></h4><br/>
 <%= image_tag "collage_host.png", alt: "adventures collage" %>
 <br/><br/>
 <h2> In exchange for your service </h2>
-<h4>TiniHost is not just great for travelers looking for a local experience, it's also great for you as a local to get something in return as well.</h4><br/>
+<h4>TiniHost is not just great for travelers looking for a local experience, it's also great for you as a local to get something in return.</h4><br/>
 <strong> Money </strong><br/>
 Showing someone a good time can be time consuming and costly (ie. if you are cooking for someone). Don't be shy, make some money in return. Your asking amount will appear on your profile and travelers will decide if the amount sounds reasonable to them before booking.
 <br/><br/>
@@ -11,12 +11,12 @@ Showing someone a good time can be time consuming and costly (ie. if you are coo
 Learning a new language can open doors, mastering it can take lots of practice. Why not host someone who's a native speaker to fine-tune all those pronunciations you have been struggling with.
 <br/><br/>
 <strong> Make a new friend </strong><br/>
-Dinner can cost $50 but a new friendship is priceless. Make these count, go crash with your new friends the next time you visit their town.
+Dinner can cost $50 but a new friendship is priceless. Make these count, like go crash with your new friends the next time you visit their town.
 <br/><br/>
 <strong> Negotiable </strong><br/>
 Leaving it entirely up to you and the traveler. Just make sure you agree on the same thing before booking a meetup.<br/><br/>
 
-<h4> IMPORTANT: When a traveler books a meetup with you, s/he is agreeing to what you are asking for in exchange. Conditions of the exchange cannot be changed after the initial meeting request and any monetary transaction agreed upon will be conducted in person.
+<h4> IMPORTANT: When travelers book meetups with you, they are agreeing to what you are asking for in exchange. Conditions of the exchange cannot be changed after the initial meeting request and any monetary amount agreed upon will be transacted in person.
 <br/><br/><br/>
 <h2> Host duty </h2>
 <h4>Go on, pick what you want to be.</h4><br/><br/>
