--- a/app/views/shared/_how_it_works.html.erb
+++ b/app/views/shared/_how_it_works.html.erb
@@ -1,6 +1,6 @@
     <div class="row">
        <h2>How it works</h2><br/>
-       <strong>TiniHost connects travelers and locals for a more authentic, personal, and responsible travel experience. </strong>
+       <h3>TiniHost connects travelers and locals for a more authentic, personal, and responsible travel experience. </h3>
     </div>
     <br/>
     <div class="row">
