--- a/app/views/mailbox/show.html.erb
+++ b/app/views/mailbox/show.html.erb
@@ -3,7 +3,7 @@
 <div class="span11">
    <div class="row">
       <%= image_tag find_display_imgurl(current_user.id, "thumb"), id: "profile-thumb" %>	  
-      <strong style="margin-left:10px"><%="Your messages"%></strong>
+      <strong><%="Your messages"%></strong>
       <div class="filler"></div>
       <%= render 'shared/mailbox_nav' %>
    </div>
