--- a/app/views/pages/_travelerinfo.html.erb
+++ b/app/views/pages/_travelerinfo.html.erb
@@ -5,13 +5,13 @@
 <h4>You can book as many meetups as you like. 2 day advance notice is required for cancellation. </h4> 
 <br/>
 <ol>
-   <li>Request a meetup.</li>
+   <li>Request a meetup and see if the host is available.</li>
    <li>Book if host is available. You can also say 'nevermind' if you decide not to book with the host.</li>
-   <li>Review your host after the meetup to build a good community for future travelers.</li>
+   <li>Review your host after the meetup to build a safe and reliable community for future travelers.</li>
 </ol>
 <h4> IMPORTANT: When you book a meetup, you are agreeing to give whatever the host is asking for in exchange for their service.</h4><br/><br/>
 <h2> Picking a host </h2></p>
-<h4>TiniHost provides reviews and stats on each host to help you make an informed decision on who to pick. This also means we rely on you as a traveler to review your experiences and build a  community of of responsible hosts.</h4>
+<h4>TiniHost provides reviews and stats on each host to help you make an informed decision on who to pick. This also means we rely on you as a traveler to review your experiences and build a community of responsible hosts.</h4>
 <div class="row">
       <div class="span1">
          <br/>
@@ -42,7 +42,7 @@
       <br/>
       <div class="span7">
          <strong>Reviews written</strong><br/>
-         This number shows you the number of this user has written both as a traveler and host. Reviews and ratings are important for both hosts and travelers to validate one another.
+         This number shows you the number of reviews this user has written both as a traveler and a host. Reviews and ratings are important for both hosts and travelers to validate one another. If you have any questions, message the host before requesting a meetup.
       </div>
 </div>
  <div class="row">
@@ -57,7 +57,7 @@
          </div>
          </div>
          <br/>
-         <h4> Aside from the stats, always read the host' profile and service description to see if you will be a good match </h4>
+         <h4> Aside from the stats, carefully read the service description and personal introduction to see if you will be a good match. TiniHost requires hosts to think about how they would promote environmentally responsible tourism so do take a note of their green points. </h4>
          <br/><br/>
          <h2> Safety </h2>
          <h4>TiniHost wants you to have a safe and fun experience meeting locals. Unfortunately, we do not have the infrastructure to screen the mental health of all of our users. So please, use your common sense when meeting strangers. TiniHost highly recommends meeting during daylight hours and in public places, at least for your initial meetup. Don't be afraid to leave or use the appropriate authorities when feeling uncomfortable or threatened by someone. Please contact our team if you ever run into problems with anyone and we'll make sure to investigate and blacklist the host if necessary.</h4>
