--- a/app/views/pages/_hostinfo.html.erb
+++ b/app/views/pages/_hostinfo.html.erb
@@ -1,4 +1,4 @@
-<h2> Who should be a tiniHost?</h2>
+<h2> Who should be tiniHost?</h2>
 <h4>Do you know the trendiest boutiques or the place to go for live music in town? Can you cook a mean local dish or take someone on a crazy adventure to the middle of nowhere? <br/><br/><b>Become a tiniHost to entertain travelers looking for fun and original ways to experience your city in exchange for payment, language practice, or the simple joy of making a new friend. </b></h4><br/>
 <%= image_tag "collage_host.png", alt: "adventures collage" %>
 <br/><br/>
@@ -16,7 +16,7 @@ Dinner can cost $50 but a new friendship is priceless. Make these count, like go
 <strong> Negotiable </strong><br/>
 Leaving it entirely up to you and the traveler. Just make sure you agree on the same thing before booking a meetup.<br/><br/>
 
-<h4> IMPORTANT: When travelers book meetups with you, they are agreeing to what you are asking for in exchange. Conditions of the exchange cannot be changed after the initial meeting request and any monetary amount agreed upon will be transacted in person.
+<h4> <b>IMPORTANT:</b> When travelers book meetups with you, they are agreeing to what you are asking for in exchange. Conditions of the exchange cannot be changed after the initial meeting request and any monetary amount agreed upon will be exchanged in person.
 <br/><br/><br/>
 <h2> Host duty </h2>
 <h4>Go on, pick what you want to be.</h4><br/><br/>
@@ -98,6 +98,8 @@ Leaving it entirely up to you and the traveler. Just make sure you agree on the 
          You are on first-name basis with all the bouncers working the hottest bars and clubs. You know where to find that perfect martini and how to work the friskiest dance floor. Add an exotic touch by bringing a traveler with you next time.
       </div>
 </div><br/><br/>
+<h2> Booking meetups </h2>
+<h4> Travelers will request meetups with you if they are interested in your service. Once the request is sent, it will show up in your meetup list and you can decide to respond available or no. If you respond available, the traveler will have the ability to book the meetup. A 2-day advance notice is required to cancel any booked meetups.<br/><br/> You can also look for potential travelers on the request board and respond to posts that match the service you can offer in your city.</h4><br/><br/>
 <h2> Safety </h2>
 <h4>TiniHost wants you to have a safe and fun experience meeting travelers. Unfortunately, we do not have the infrastructure to screen the mental health of all of our users. So please, use your common sense when meeting strangers. TiniHost highly recommends meeting during daylight hours and in public places, at least for your initial meetup. Don't be afraid to leave or use the appropriate authorities when feeling uncomfortable or threatened by someone. Please contact our team if you ever run into problems with anyone and we'll make sure to investigate and blacklist the user if necessary.</h4>
 <div class="filler">
