--- a/app/views/pages/_travelerinfo.html.erb
+++ b/app/views/pages/_travelerinfo.html.erb
@@ -9,7 +9,8 @@
    <li>Book if host is available. You can also say 'nevermind' if you decide not to book with the host.</li>
    <li>Review your host after the meetup to build a safe and reliable community for future travelers.</li>
 </ol>
-<h4> IMPORTANT: When you book a meetup, you are agreeing to give whatever the host is asking for in exchange for their service.</h4><br/><br/>
+<h4> You can also look for hosts by posting a request on the request board describing what you are looking for. Hosts will respond if they see a match between your request and the service they can provide.</h4><br/>
+<h4> <b>IMPORTANT:</b> When you book a meetup, you are agreeing to give whatever the host is asking for in exchange for their service.</h4><br/><br/>
 <h2> Picking a host </h2></p>
 <h4>TiniHost provides reviews and stats on each host to help you make an informed decision on who to pick. This also means we rely on you as a traveler to review your experiences and build a community of responsible hosts.</h4>
 <div class="row">
