--- a/app/views/hostprofiles/_service_information.html.erb
+++ b/app/views/hostprofiles/_service_information.html.erb
@@ -15,13 +15,13 @@
          <small id="light">Tell travelers what you are offering. Describe the kind of experience they will get with you as their host. </small>
        </div>
        
-       <%= f.text_area :serviceDesc, :toolbar=>'Basic' %>
+       <%= f.text_area :serviceDesc%>
      </div>
      <div class="field" id="personalform">
        <%= f.label :green_points %>
        <div style="width: 600px">
           <small id="light">TiniHost encourages everyone to be environmentally responsible when traveling. Tell travelers how you would promote environmentally responsible tourism. It can be as simple as using public transportation to get around.</small></div>
-       <%= f.text_area :greenDesc, :toolbar=>'Basic' %>
+       <%= f.text_area :greenDesc%>
      </div>
 </div>
 </div>
