--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
             <%= link_to "What about other cities?", about_path(view: "faq", anchor: "limited_cities") %>
          </div>
          <div class="row" id="location-button">
-            <%= link_to image_tag("facebook2.png", alt: "Tinihost facebook page", size: "60x60"), "https://www.facebook.com/TiniHost" %>   <strong>  </strong> <%= link_to image_tag("twitter.png", alt: "Tinihost twitter page", size: "60x60"), "https://twitter.com/tinihost" %>           
+            <%= link_to image_tag("facebook.png", alt: "Tinihost facebook page", size: "60x60"), "https://www.facebook.com/TiniHost" %>   <strong>  </strong> <%= link_to image_tag("twitter.png", alt: "Tinihost twitter page", size: "60x60"), "https://twitter.com/tinihost" %>           
          </div>                 
          </div>
       </div>
