--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -57,7 +57,7 @@
 </div>         
 <div class="span9" style="color:white">    
    <div class="row host_info" style="background-color:#aaa" >
-       <b id="message_icon" style="width:55px"><%= link_to "Message", new_user_message_path(user) %></b>Helen to discuss more.
+       <b id="message_icon" style="width:55px"><%= link_to "Message", new_user_message_path(user) %></b><%= user.firstname.capitalize %> to discuss more.
        <br/><br/>
        
           <!-- status message for host -->
