--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
             <%= link_to image_tag("seattle.png", alt: "Seattle"), fill_location_path(city_country_location: "Seattle, United States") %>
             <%= link_to image_tag("newyork.png", alt: "New York"), fill_location_path(city_country_location: "New York, United States") %>
             <%= link_to image_tag("toronto.png", alt: "Toronto"), fill_location_path(city_country_location: "Toronto, Canada") %>
-            <%= link_to image_tag("london.png", alt: "London"), fill_location_path(city_country_location: "London, United Kingdoms"), class: "seattle-icon" %>           
+            <%= link_to image_tag("london.png", alt: "London"), fill_location_path(city_country_location: "London, United Kingdom"), class: "seattle-icon" %>           
             <%= link_to image_tag("paris.png", alt: "Paris"), fill_location_path(city_country_location: "Paris, France") %>
          </div>
          <div class="row" style="height:150px" id="location-button">
