--- a/app/views/appointments/_appointment.html.erb
+++ b/app/views/appointments/_appointment.html.erb
@@ -1,6 +1,5 @@
-<% profile = Hostprofile.find_by_id(appointment.host_id) %>
-<% host = profile.user unless profile.nil? %>
-<% traveler = User.find_by_id(appointment.traveler_id) %>
+<% host = appointment.host.user %>
+<% traveler = appointment.traveler %>
    <%= link_to user_appointment_path(current_user, appointment, fullview:true) do %>
       <div class="row host_info appt-block">
          <div class="row">            
