--- a/app/views/appointments/_meetup_booked.html.erb
+++ b/app/views/appointments/_meetup_booked.html.erb
@@ -1,7 +1,7 @@
 <% profile = Hostprofile.find_by_id(appointment.host_id) %>
 <% host = profile.user unless profile.nil? %>
 <% traveler = User.find_by_id(appointment.traveler_id) %>
-<%= link_to user_appointment_path(current_user, appointment, fullview:true) do %>
+<%= link_to user_appointment_path(current_user, appointment) do %>
 <div class="host_info booked-block" >
    <div class="row">
        <div class="span3">
