added character counter

--- a/app/views/shared/_how_it_works.html.erb
+++ b/app/views/shared/_how_it_works.html.erb
@@ -4,12 +4,12 @@
     </div>
     <br/>
     <div class="row">
-       <div class="span2">
+       <div class="span3">
           <br/><h1>1</h1><br/>
           <h4> Decide where you are going next. </h4><br/>
        </div>
-      <div class="span6">
-         <%= image_tag "collage2.png", alt: "pictures of paris, sintra, and hanoi" %>
+      <div class="span5">
+         <%= image_tag "places.png", alt: "pictures of paris, sintra, and hanoi" %>
       </div>
     </div>
     <br/>
@@ -47,7 +47,7 @@
     </div>
    <br/><br/>
     <div class="row">
-       <div class="span8">
+       <div class="span7">
           <h1> 5 </h1><br/>
           
           <h4>After your meetup, complete a quick review of your experience. Your stats will be updated accordingly and your host will be super grateful for your awesome feedback :).</h4>
