--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,11 +28,11 @@ $navbarLinkColor:#ccc;
 .aboutpage{
 	margin-left:20px;
 	h1{
-			border:1px solid #ddd;
-			border-radius: 4px;
+			border-bottom:1px solid #ddd;
+			/*border-radius: 4px;*/
 			color:#2EB8E6;
 			padding-left:20px;
-			background-color:#eee;
+			/*background-color:#eee;*/
 	}
 	h4{
 		font-size:1.3em;
@@ -62,11 +62,9 @@ $navbarLinkColor:#ccc;
 		color:#D6F5FF;
 	}
 	h1{
-		border:1px solid #999;
-		border-radius: 4px;
+		border-bottom :1px solid #999;
 		color:#E0FFF0;
 		padding-left:20px;
-		background: #aaa;
 	}
 	h4{
 		font-size:1.3em;
