--- a/app/views/hostprofiles/_service_information.html.erb
+++ b/app/views/hostprofiles/_service_information.html.erb
@@ -7,7 +7,8 @@
           <small id="light">
              This short description will be displayed on your profile badge listed as part of search results. </small>
       </div>
-      <%= f.text_area :intro %>
+      <small id="hint" class="charcount" > Characters remaining: <span id="charcount"><%= 140 - (@hostprofile.try(:intro).length || 0 )%> </span> </small><br/>
+      <%= f.text_area :intro, max_length: 140 %>
     </div>
      <div class="field" id="personalform">
        <%= f.label :Service_Description %>
